feat: 新增简单版根据sql生成flex代码目前不支持复杂sql（只支持and、or）
Signed-off-by: 时间淡忘一切 <7990497@qq.com>